# ZLEditor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  ZLEditor.spec  app.py  docker-compose.yml  entities.json  index.html  launch.sh  mempalace.yaml  package-lock.json  package.json  pyproject.toml  requirements-build.txt  requirements.txt  server.py
.github/workflows/: main.yml  release.yml
app/: config.py  dependencies.py  main.py
app/models/: chat.py  compile.py  config.py
app/providers/: anthropic.py  base.py  deepseek.py  factory.py  gemini.py  ollama.py  openai.py
app/routers/: ai.py  compile.py  proxy.py
app/services/: chat_service.py  compile_service.py  config_service.py  memory_service.py
scripts/: app.js  editor-bundle.js  editor-entry.js
scripts/i18n/: en.js  es.js  index.js  pt-BR.js
scripts/services/: BibService.js  CompileService.js  StorageService.js  ZipService.js  ZoteroService.js
scripts/store/: ProjectStore.js
scripts/ui/: AiPanel.js  BibtexPanel.js  Editor.js  EditorPanel.js  FileTree.js  LogModal.js  PdfViewer.js  QuickOpen.js  Sidebar.js  Toast.js  ZoteroPanel.js
scripts/utils/: bibtex.js  escape.js  latex-completions.js
styles/: base.css
styles/components/: ai-panel.css  badge.css  button.css  card.css  input.css  modal.css  quick-open.css  toolbar.css
styles/layout/: app.css  editor.css  file-tree.css  panel.css  pdf-viewer.css  sidebar.css
tests/: conftest.py  test_desktop_launcher.py
tests/providers/: test_factory.py  test_providers.py
tests/routers/: test_ai.py  test_compile.py  test_main.py  (+1 more)
(+76 files in other folders)
